# wiesel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classMonoObjectWrapper-members.html  classMonoObjectWrapper.html  classMonoObjectWrapper.js  classMonoStringWrapper-members.html  classMonoStringWrapper.html  classMonoStringWrapper.js  classScopedMonoStringWrapper-members.html  classScopedMonoStringWrapper.html  classScopedMonoStringWrapper.js  classWiesel_1_1AppRecreateSwapChainsEvent-members.html  classWiesel_1_1AppRecreateSwapChainsEvent.html  classWiesel_1_1AppRecreateSwapChainsEvent.js  classWiesel_1_1AppRecreateSwapChainsEvent__coll__graph.md5  classWiesel_1_1AppRecreateSwapChainsEvent__inherit__graph.map  classWiesel_1_1AppWindow-members.html  classWiesel_1_1AppWindow.html  classWiesel_1_1AppWindow.js  classWiesel_1_1AppWindow__coll__graph.map  classWiesel_1_1AppWindow__coll__graph.md5  classWiesel_1_1AppWindow__inherit__graph.map  classWiesel_1_1AppWindow__inherit__graph.md5  classWiesel_1_1Application-members.html  classWiesel_1_1Application.html  classWiesel_1_1Application.js  classWiesel_1_1Application__coll__graph.map  classWiesel_1_1Application__coll__graph.md5  classWiesel_1_1AttachmentTexture-members.html  classWiesel_1_1AttachmentTexture.html  classWiesel_1_1AttachmentTexture.js  classWiesel_1_1BehaviorsComponent-members.html  classWiesel_1_1BehaviorsComponent.html  classWiesel_1_1BehaviorsComponent.js  (+1250 more)
demo/: w_cube.cpp  w_cube.hpp  w_demo.cpp  w_demo.h  w_demo.hpp
docs/: Doxyfile
editor/: CMakeLists.txt
editor/include/: w_editor.hpp
editor/include/editor/: w_editor.hpp
editor/src/: w_editor.cpp
editor/src/editor/: w_editor.cpp
examples/demo/: CMakeLists.txt  w_demo.cpp  w_demo.hpp
examples/demo/assets/scripts/: CameraScript.cs  TestBehavior.cs
include/: Logger.h  Profiler.h  Utils.h  WieselEngine.h  WieselWindow.h  w_application.h  w_application.hpp  w_baseobject.h  w_buffer.h  w_camera.h  w_descriptor.h  w_engine.h  w_engine.hpp  w_entrypoint.hpp  w_keymanager.h  w_layer.h  w_layerimgui.h  w_light.h  w_logger.h  w_mesh.h  w_model.h  w_object.h  w_pch.h  w_pch.hpp  w_profiler.h  w_renderer.h  w_rendererapi.h  w_texture.h  w_utils.h  w_vectors.h  w_window.h
monolib/: CMakeLists.txt
monolib/include/: mono_util.h
monolib/src/: mono_util.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+112 more)
wiesel/: CMakeLists.txt
wiesel/assets/internal_scripts/: Debug.cs  Internals.cs
wiesel/assets/internal_scripts/components/: TransformComponent.cs
wiesel/assets/internal_scripts/math/: Mathf.cs  Vector3f.cs
wiesel/assets/internal_shaders/: fullscreen_shader.vert  geometry_shader.frag  lighting_shader.frag  shadow_shader.frag  shadow_shader.vert  skybox_shader.frag  sprite_shader.frag  sprite_shader.vert  ssao_blur_shader.frag  ssao_gen_shader.frag
wiesel/assets/scripts/: Input.cs  Internal.cs  Internals.cs  Log.cs  MonoBehavior.cs  input.def.lua  test.lua
wiesel/assets/scripts/components/: TransformComponent.cs
wiesel/assets/scripts/math/: Vector3.cs
wiesel/assets/shaders/: geometry_shader.frag  geometry_shader.vert  lighting_shader.frag  quad_shader.frag  quad_shader.vert  shadow_shader.vert  skybox_shader.vert  ssao_blur_shader.frag  ssao_gen_shader.frag  standard_shader.frag  standard_shader.vert
wiesel/include/: w_application.hpp  w_engine.hpp  w_entrypoint.hpp  w_pch.hpp
wiesel/include/behavior/: w_behavior.hpp
wiesel/include/events/: w_appevents.hpp  w_events.hpp  w_keyevents.hpp  w_mouseevents.hpp
wiesel/include/input/: w_input.hpp
wiesel/include/layer/: w_layer.hpp  w_layerimgui.hpp  w_layerscene.hpp
wiesel/include/rendering/: w_buffer.hpp  w_camera.hpp  w_command.hpp  w_descriptor.hpp  w_descriptorlayout.hpp  w_framebuffer.hpp  w_image.hpp  w_material.hpp  w_mesh.hpp  w_perf_marker.hpp  w_pipeline.hpp  w_renderer.hpp  w_rendererapi.hpp  w_renderpass.hpp  w_renderpipeline.hpp  w_sampler.hpp  w_shader.hpp  w_skybox.hpp  w_sprite.hpp  w_texture.hpp
wiesel/include/scene/: w_components.hpp  w_componentutil.hpp  w_entity.hpp  w_lights.hpp  w_scene.hpp
wiesel/include/script/: w_scriptmanager.hpp
wiesel/include/script/lua/: w_scriptglue.hpp
wiesel/include/script/mono/: w_monobehavior.hpp  w_scriptglue.hpp
wiesel/include/ui/: w_canvas.hpp  w_font.hpp
wiesel/include/util/: w_attributes.hpp  w_color.hpp  w_dialogs.hpp  w_keycodes.hpp  w_logger.hpp  w_mousecodes.hpp  w_profiler.hpp  w_spirv.hpp  w_tracy.hpp  w_utils.hpp  w_uuid.hpp  w_vectors.hpp
wiesel/include/util/imgui/: imgui_spectrum.hpp  w_imguiutil.hpp
wiesel/include/window/: w_glfwwindow.hpp  w_window.hpp
wiesel/src/: w_application.cpp  w_engine.cpp
wiesel/src/behavior/: w_behavior.cpp
wiesel/src/input/: w_input.cpp
wiesel/src/layer/: w_layer.cpp  w_layerimgui.cpp  w_layerscene.cpp
wiesel/src/rendering/: w_buffer.cpp  w_camera.cpp  w_command.cpp  w_descriptor.cpp  w_descriptorlayout.cpp  w_framebuffer.cpp  w_material.cpp  w_mesh.cpp  w_pipeline.cpp  w_renderer.cpp  w_rendererapi.cpp  w_renderpass.cpp  w_renderpipeline.cpp  w_sampler.cpp  w_shader.cpp  w_skybox.cpp  w_sprite.cpp  w_texture.cpp
wiesel/src/scene/: w_components.cpp  w_componentutil.cpp  w_entity.cpp  w_lights.cpp  w_scene.cpp
wiesel/src/script/: w_scriptmanager.cpp
wiesel/src/script/lua/: w_scriptglue.cpp
wiesel/src/script/mono/: w_monobehavior.cpp
wiesel/src/systems/: w_canvas_system.cpp
wiesel/src/ui/: w_canvas.cpp  w_font.cpp
wiesel/src/util/: w_color.cpp  w_dialogs.cpp  w_math.cpp  w_profiler.cpp  w_spirv.cpp  w_tracy.cpp  w_utils.cpp  w_uuid.cpp
wiesel/src/util/imgui/: imgui_spectrum.cpp  w_imguiutil.cpp
wiesel/src/window/: w_glfwwindow.cpp  w_window.cpp
(+174 files in other folders)
